--- a/image_finder/src/templates/card.hbs
+++ b/image_finder/src/templates/card.hbs
@@ -1,8 +1,6 @@
 {{#each this}}
-
 <div class="photo-card">
-    <img class="card-image" src="{{webformatURL}}" alt="{{tags}}" />
-
+    <img src="{{webformatURL}}" alt="{{tags}}" />
     <div class="stats">
         <p class="stats-item">
             <i class="material-icons">thumb_up</i>
@@ -22,5 +20,4 @@
         </p>
     </div>
 </div>
-
 {{/each}}
